Added the previous version of the Common Library (moved out of the CPWorldSimulator), setup a CommonCUDA Library (contains the GPU Utility class from the CPWorldSimulator project) and created a Games Library which will house various game related features such as an Inventory System.

--- a/CP.GamesLibrary/CP.GamesLibrary.csproj
+++ b/CP.GamesLibrary/CP.GamesLibrary.csproj
@@ -3,17 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>Chandler Pope-Lewis</Authors>
-    <Company>Pope Games, Inc</Company>
+    <Company>Pope Games</Company>
+    <Copyright />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <Optimize>false</Optimize>
     <OutputPath>C:\Users\cpope\Desktop\CP Repos\</OutputPath>
-    <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CP.CommonCUDA\CP.CommonCUDA.vcxproj" />
-  </ItemGroup>
 
 </Project>
