Created a ClassLoader system

--- a/CP.CommonCUDA/CP.CommonCUDA.vcxproj
+++ b/CP.CommonCUDA/CP.CommonCUDA.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GpuTimer.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
