--- a/CP.Tests/CP.Tests.csproj
+++ b/CP.Tests/CP.Tests.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CP.Common\CP.Common.csproj" />
+    <ProjectReference Include="..\CP.Localisation\CP.Localisation.csproj" />
   </ItemGroup>
 
 </Project>
