Started work on a Neural Network

--- a/CP.AILibrary/CP.AILibrary.csproj
+++ b/CP.AILibrary/CP.AILibrary.csproj
@@ -5,9 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="FiniteStateMachine\" />
     <Folder Include="BehaviourTree\" />
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
